syntax = "proto3";

package auth_service;

option go_package = "./";

message VerifyTokenRequest {
    string text = 1;
}
message VerifyTokenResponse {
    string username = 1;
    int64 employee_id = 2;
}

service AuthService {
    rpc VerifyToken(VerifyTokenRequest) returns (VerifyTokenResponse);
}
